@@ -27,6 +27,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - BREAKING - Must be 3.3.0+ to upgrade to 4.x
   - BREAKING - Move to roles for some permission checking,
                userAdmin role required to edit users
+  - BREAKING - the version file lives in common directory now
   - addUser.js - new --roles option, --admin creates superAdmin user
   - cont3xt - new Cont3xt application, see https://arkime.com/cont3xt
   - cont3xt/viewer - share new user UI
